--- a/python/Python Intro 2.ipynb
+++ b/python/Python Intro 2.ipynb
@@ -346,7 +346,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "    \n",
+    "    \n",
+    "    for days in x (days*86400)\n",
+    "    for hours in x (hours*3600)\n",
+    "     for min in x (min*60)"
+   ]
   },
   {
    "cell_type": "markdown",
